--- a/asset-dashboard-ui/src/app/shared/assetRisk/assetRisk.component.css
+++ b/asset-dashboard-ui/src/app/shared/assetRisk/assetRisk.component.css
@@ -9,7 +9,7 @@
 .circle {
   width : 40px;
   border-radius: 50%;
-  color: darkgray;
+  color: black;
   line-height: 40px;
   text-align: center;
   margin: auto
