Work on websocket again

--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard-table/dashboard-table.component.css
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard-table/dashboard-table.component.css
@@ -7,6 +7,10 @@
     margin: 1vh 0 -1vh 0;
   }
 
+.dash-row {
+   padding: 10px 5px;
+}
+
 .mat-table {
 /*    padding: 1vh 2vh;*/
 /*    margin: auto;*/
